[tool.poetry]
name = "hero-test-api"
version = "0.1.0"
description = ""
authors = ["Ira <ira.ivashko.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pytest = "^8.3.4"
httpx = "^0.28.0"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
